# ex-canton-gdpr

./: .gitignore  Makefile  README.md  bootstrap.canton  daml.yaml  pyproject.toml  run-canton.sh  run-iterm.sh  run-owner.sh  run.sh  script_daemons.py  setup.py  simple-topology.conf  start-postgres.sh
bots/: bots.py
daml/: DataSubject.daml  IdentityManagement.daml  Setup.daml  Test.daml
documentation/: canton-capabilities.md  encryption.md
pg-initdb/: init-userdb.sh
